force-app/main/default/objects/SFDC_Script__c/SFDC_Script__c.object-meta.xml
<CustomObject>
    <description>Contains the questions, question order, and passing score information</description>
    <label>Script</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>