force-app/main/default/objects/SFDC_Script__c/fields/Available_With__c.field-meta.xml
<CustomField>
    <fullName>Available_With__c</fullName>
    <label>Available With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>