force-app/main/default/objects/SFDC_Script__c/fields/Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score__c</fullName>
    <description>The number of points the question taking the script has to earn to pass the script.</description>
    <label>Passing Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>