force-app/main/default/objects/SFDC_Script__c/fields/Script_Description__c.field-meta.xml
<CustomField>
    <fullName>Script_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>