force-app/main/default/objects/SFDC_Script__c/fields/Use_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Use_Scoring__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Scoring</label>
    <type>Checkbox</type>
</CustomField>